build: try and fix build error

--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
-    ]
+    ],
+    "rules": {
+      "body-max-line-length": [2, "always", 400]
+    }
   },
   "config": {
     "commitizen": {
